--- a/src/documents/themes/yellow-swan/css/theme.less
+++ b/src/documents/themes/yellow-swan/css/theme.less
@@ -124,6 +124,10 @@ nav {background: #2b2b2b;}
 .schedule-slot {color:#2b2b2b;}
 .schedule-tbl tbody tr:hover {background:#fffde1;}
 .schedule-coffee, .schedule-closing, .schedule-lunch, .schedule-other {color:#214f87;}
+.schedule-title {
+    margin-top: 0.8em;
+    margin-bottom: 0.2em;
+}
 
 /* =============================================================================
    SPONSORS
