--- a/src/documents/themes/yellow-swan/css/theme.less
+++ b/src/documents/themes/yellow-swan/css/theme.less
@@ -97,6 +97,8 @@ nav {background: #2b2b2b;}
 .speaker-photo .photo {
   border-radius: 50%;
   box-shadow: 0 0 0 8px rgba(0,0,0,.07);
+  width: 120px;
+  height: 120px;
   .transition(all 0.3s ease-out);
 }
 .speakers-item:hover .speaker-photo .photo {box-shadow: 0 0 0 8px rgba(0,0,0,.3);}
