--- a/src/documents/themes/yellow-swan/css/base.less
+++ b/src/documents/themes/yellow-swan/css/base.less
@@ -59,6 +59,8 @@ nav {
   margin-bottom: 0.2em;
   font-size: 10em;
   letter-spacing: -.04em;
+  opacity: 0.75;
+  
 }
 .tagline {
   margin-bottom:50px;
