--- a/src/documents/themes/default/css/theme.less
+++ b/src/documents/themes/default/css/theme.less
@@ -97,8 +97,6 @@ nav {background: #2b2b2b;}
 .speaker-photo .photo {
   border-radius: 50%;
   box-shadow: 0 0 0 8px rgba(0,0,0,.07);
-  width: 120px;
-  height: 120px;
   .transition(all 0.3s ease-out);
 }
 .speakers-item:hover .speaker-photo .photo {box-shadow: 0 0 0 8px rgba(0,0,0,.3);}
@@ -108,6 +106,10 @@ nav {background: #2b2b2b;}
   border-radius: 8px;
 }
 
+.speakers-item .speaker-photo .photo {
+  width: 120px;
+  height: 120px;
+}
 /* =============================================================================
    SCHEDULE
    ========================================================================== */
@@ -131,6 +133,10 @@ nav {background: #2b2b2b;}
     margin-bottom: 0.2em;
 }
 
+.schedule-slot .speaker-photo .photo {
+  width: 40px;
+  height: 40px;
+}
 /* =============================================================================
    SPONSORS
    ========================================================================== */
